--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     rev: v5.0.0
     hooks:
       - id: trailing-whitespace
-        files: "onesignal.*"
+        files: "onesignal_erpnext.*"
         exclude: ".*json$|.*txt$|.*csv|.*md|.*svg"
       - id: check-merge-conflict
       - id: check-ast
@@ -38,11 +38,11 @@ repos:
         # Ignore any files that might contain jinja / bundles
         exclude: |
             (?x)^(
-                onesignal/public/dist/.*|
+                onesignal_erpnext/public/dist/.*|
                 .*node_modules.*|
                 .*boilerplate.*|
-                onesignal/templates/includes/.*|
-                onesignal/public/js/lib/.*
+                onesignal_erpnext/templates/includes/.*|
+                onesignal_erpnext/public/js/lib/.*
             )$
 
 
@@ -55,12 +55,12 @@ repos:
         # Ignore any files that might contain jinja / bundles
         exclude: |
             (?x)^(
-                onesignal/public/dist/.*|
+                onesignal_erpnext/public/dist/.*|
                 cypress/.*|
                 .*node_modules.*|
                 .*boilerplate.*|
-                onesignal/templates/includes/.*|
-                onesignal/public/js/lib/.*
+                onesignal_erpnext/templates/includes/.*|
+                onesignal_erpnext/public/js/lib/.*
             )$
 
 ci:
